[Back-End][fix] fixed room search